<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".authentication.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/logo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/generalsans_semibold"
            android:text="@string/hello_there_welcome_back"
            android:textColor="#000"
            android:textSize="40sp"
            android:transitionName="logo_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal"
                app:boxStrokeColor="@color/very_dark_gray_mostly_black">

                <EditText
                    android:id="@+id/et_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:text="@string/_998" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.apachat.loadingbutton.core.customViews.CircularProgressButton
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_circular_button_background"
                android:fontFamily="@font/generalsans_semibold"
                android:text="@string/sign_in"
                app:spinning_bar_color="@color/white"
                app:spinning_bar_width="3dp"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/generalsans_medium"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/very_dark_gray_mostly_black"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>