<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".authentication.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/logo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/generalsans_semibold"
            android:text="@string/welcome"
            android:textColor="#000"
            android:textSize="40sp"
            android:transitionName="logo_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal"
                android:transitionName="number_field"
                app:boxStrokeColor="@color/very_dark_gray_mostly_black">

                <EditText
                    android:id="@+id/et_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:text="@string/_998" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal"
                app:boxStrokeColor="@color/very_dark_gray_mostly_black">

                <EditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/first_name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_last_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal"
                app:boxStrokeColor="@color/very_dark_gray_mostly_black">

                <EditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/last_name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_company_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal"
                app:boxStrokeColor="@color/very_dark_gray_mostly_black">

                <EditText
                    android:id="@+id/et_company_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/company_name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.apachat.loadingbutton.core.customViews.CircularProgressButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_circular_button_background"
                android:fontFamily="@font/generalsans_semibold"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/generalsans_medium"
            android:text="@string/already_have_an_account_sign_in"
            android:textColor="@color/very_dark_gray_mostly_black"
            android:textSize="16sp"
            android:transitionName="swich_txt" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>