<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@drawable/item_bottom_sheet_background"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingBottom="20dp">

    <View
        android:layout_width="50dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        android:background="@drawable/item_bottom_sheet_top_closer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="5dp"
        android:fontFamily="@font/generalsans_semibold"
        android:text="@string/address_details"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        android:background="@color/dark_gray" />

    <androidx.cardview.widget.CardView
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/very_light_gray"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/iv_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/generalsans_semibold"
                        android:text="Title"
                        android:textColor="@color/very_dark_gray_mostly_black"
                        android:textSize="18sp" />
                </RelativeLayout>


                <TextView

                    android:id="@+id/tv_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/generalsans_medium"
                    android:text="@string/description"
                    android:textColor="@color/very_dark_gray_mostly_black"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/generalsans_semibold"
                        android:text="$445.00"
                        android:textColor="@color/very_dark_gray_mostly_black"
                        android:textSize="18sp" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        android:background="@color/dark_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="5dp"
        android:fontFamily="@font/generalsans_semibold"
        android:text="@string/how_is_your_order"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/generalsans_medium"
        android:text="@string/please_give_your_rating_and_also_your_review"
        android:textColor="@color/dark_gray"
        android:textSize="14sp" />


    <com.willy.ratingbar.ScaleRatingBar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srb_clearRatingEnabled="true"
        app:srb_clickable="true"
        android:layout_marginVertical="10dp"
        android:layout_gravity="center_horizontal"
        app:srb_drawableEmpty="@drawable/ic_star_line"
        app:srb_drawableFilled="@drawable/ic_star_bold"
        app:srb_isIndicator="false"
        app:srb_minimumStars="1"
        app:srb_numStars="5"
        app:srb_rating="2"
        app:srb_scrollable="true"
        app:srb_starHeight="25dp"
        app:srb_starPadding="5dp"
        app:srb_starWidth="25dp"
        app:srb_stepSize="0.5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/item_search_view_background"
        android:paddingHorizontal="25dp"
        android:paddingVertical="10dp">


        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:hint="@string/comment"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="3dp"
            android:textSize="16sp" />


    </RelativeLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:background="@drawable/item_circular_button_background"
        android:fontFamily="@font/generalsans_semibold"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textSize="16sp" />

</LinearLayout>