<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.EditProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="0dp"
        android:stateListAnimator="@null">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:stateListAnimator="@null"
            app:contentInsetStart="0dp"
            app:elevation="0dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:titleTextColor="@color/white">

            <RelativeLayout
                android:id="@+id/rl_1_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp">

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_left_line" />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/generalsans_semibold"
                        android:text="@string/edit_profile"
                        android:textColor="@color/very_dark_gray_mostly_black"
                        android:textSize="18sp" />
                </LinearLayout>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_search_view_background"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp"
                android:transitionName="search_field">


                <EditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:hint="@string/first_name"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:padding="3dp" />


            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/item_search_view_background"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp"
                android:transitionName="search_field">


                <EditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:hint="@string/last_name"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:padding="3dp" />


            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/item_search_view_background"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp"
                android:transitionName="search_field">


                <EditText
                    android:id="@+id/et_company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:hint="@string/company_name"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:padding="3dp" />


            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/item_search_view_background"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp"
                android:transitionName="search_field">


                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:padding="3dp" />


            </FrameLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>